Fixed overflow

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ nav
 
 body
 {
-	overflow-x: hidden;
+	overflow-x: clip;
 }
 
 p
